# stm32-nrf24-example

./: Cargo.toml
.cargo/: config
src/: main.rs
